# nazo-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  authorization.py  docker-compose.yml  form.py  main.py  model.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18d67b8b6978_add_current_date_column.py  338097e53d1c_add_3_puzzles.py  49bed15774cb_add_5_puzzle.py  4ab4cddd2a6e_add_register_time.py  58043c420463_create_table_user.py  d4f75eceed76_add_2_puzzles.py  de08e605e0cb_add_puzzle_6.py
nazo_backend/: answer.py  authorization.py  form.py  main.py  model.py  query.py
